; ModuleID = '/home/carl/AnghaBench/linux/net/ceph/extr_auth.c_ceph_build_auth.c'
source_filename = "/home/carl/AnghaBench/linux/net/ceph/extr_auth.c_ceph_build_auth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ceph_auth_client = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 (%struct.ceph_auth_client*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ceph_build_auth(%struct.ceph_auth_client* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.ceph_auth_client*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.ceph_auth_client* %0, %struct.ceph_auth_client** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.ceph_auth_client*, %struct.ceph_auth_client** %4, align 8
  %9 = getelementptr inbounds %struct.ceph_auth_client, %struct.ceph_auth_client* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.ceph_auth_client*, %struct.ceph_auth_client** %4, align 8
  %12 = getelementptr inbounds %struct.ceph_auth_client, %struct.ceph_auth_client* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64 (%struct.ceph_auth_client*)*, i64 (%struct.ceph_auth_client*)** %14, align 8
  %16 = load %struct.ceph_auth_client*, %struct.ceph_auth_client** %4, align 8
  %17 = call i64 %15(%struct.ceph_auth_client* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %3
  %20 = load %struct.ceph_auth_client*, %struct.ceph_auth_client** %4, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @ceph_build_auth_request(%struct.ceph_auth_client* %20, i8* %21, i64 %22)
  store i32 %23, i32* %7, align 4
  br label %24

24:                                               ; preds = %19, %3
  %25 = load %struct.ceph_auth_client*, %struct.ceph_auth_client** %4, align 8
  %26 = getelementptr inbounds %struct.ceph_auth_client, %struct.ceph_auth_client* %25, i32 0, i32 0
  %27 = call i32 @mutex_unlock(i32* %26)
  %28 = load i32, i32* %7, align 4
  ret i32 %28
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @ceph_build_auth_request(%struct.ceph_auth_client*, i8*, i64) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
